<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:padding="16dp"
>

    <!-- Header Text -->
    <TextView
        android:id="@+id/header_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dump_ugly_excels_use"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/_17ssp"
        android:layout_marginTop="32dp"
        android:layout_gravity="start"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout_title"
        android:gravity="center_vertical"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/header_text">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_launcher_foreground"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Leads"
            android:textColor="@color/white"
            android:textSize="16sp"/>
    </LinearLayout>



    <!-- Centered TextView for the Email Title -->
    <TextView
        android:id="@+id/tv_email_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="16sp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
app:layout_constraintTop_toBottomOf="@+id/layout_title"
        android:layout_marginTop="15dp"
        app:layout_constraintHorizontal_bias="0.5" />

    <!-- Centered TextView for the Email Content -->
    <TextView
        android:id="@+id/tv_email_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/an_email_will_be_sent_containing_a_link_to_reset_your_password"
        android:textSize="14sp"
        android:layout_marginTop="5dp"
        android:textColor="@color/gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_email_title"
        app:layout_constraintHorizontal_bias="0.5" />

    <!-- Centered EditText for the Email Input -->
    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="password"
        android:hint="@string/enter_your_email_id"
        android:background="@drawable/rounded_background"
        android:padding="12dp"
        android:inputType="textEmailAddress"
        android:layout_marginTop="5dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#BBBBBB"
        app:layout_constraintTop_toBottomOf="@id/tv_email_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Centered Button for Submit -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_recovery_email"
        android:textAllCaps="false"
        android:background="@drawable/rounded_background"
        android:backgroundTint="@color/black"
        android:textColor="@color/white_light"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/et_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Bottom Layout Centered -->
    <LinearLayout
        android:id="@+id/layout_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/btn_submit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Remember Password TextView -->
        <TextView
            android:id="@+id/tv_remember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember_password"
            android:textSize="14sp"
            android:textColor="@color/white" />

        <!-- Login Section with Dashed Line -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:layout_marginStart="5dp"

            android:orientation="vertical">

            <!-- Login TextView -->
            <TextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Login"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/white" />

            <!-- Dashed Line below the Login TextView -->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white_light" />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/googleButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/rounded_background"
        android:gravity="center"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/layout_login"
        android:clickable="true"
        android:focusable="true">

        <ImageView
            android:id="@+id/googleLogo"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/google"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/googleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/sign_up_login_with_google"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:fontFamily="sans-serif-medium" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
